[workspace.package]
version = "0.24.0"
edition = "2021"

documentation = "https://docs.rs/probe-rs/"
homepage = "https://github.com/probe-rs/probe-rs"
repository = "https://github.com/probe-rs/probe-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"


[workspace]
resolver = "2"
members = [
    "probe-rs",
    "probe-rs-target",
    "rtthost",
    "smoke-tester",
    "xtask",
    "target-gen",
    "probe-rs-tools",
    "probe-rs-mi",
]
exclude = ["probe-rs/tests/gpio-hal-blinky"]

[workspace.dependencies]
probe-rs = { path = "probe-rs", version = "0.24.0" }
probe-rs-target = { path = "probe-rs-target", version = "0.24.0" }
probe-rs-mi = { path = "probe-rs-mi", version = "0.1.0" }

docsplay = "0.1.1"
thiserror = "1.0.59"
anyhow = "1.0.82"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Build only the required packages, and individually
precise-builds = true
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.xz"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "probe-rs/homebrew-probe-rs"
# A prefix git tags must include for cargo-dist to care about them
tag-namespace = "v"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = false
# Select custom runner for ARM Linux
[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-2vcpu-ubuntu-2204-arm"
aarch64-unknown-linux-musl = "buildjet-2vcpu-ubuntu-2204-arm"

[workspace.metadata.dist.dependencies.apt]
libudev-dev = '*'
libudev1 = { stage = ["run"] }

[workspace.lints.clippy]
unnecessary_self_imports = "deny"
enum_glob_use = "deny"
macro_use_imports = "deny"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev.package.zip]
# Set the default for zip in development mode so the creation of the zip does not take forever
opt-level = 3
