[workspace.package]
version = "0.27.0"
edition = "2024"

documentation = "https://docs.rs/probe-rs/"
homepage = "https://github.com/probe-rs/probe-rs"
repository = "https://github.com/probe-rs/probe-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"


[workspace]
resolver = "2"
members = [
    "probe-rs",
    "probe-rs-target",
    "rtthost",
    "smoke-tester",
    "xtask",
    "target-gen",
    "probe-rs-tools",
    "probe-rs-mi",
    "probe-rs-debug",
]
exclude = ["probe-rs/tests/gpio-hal-blinky"]

[workspace.dependencies]
probe-rs = { path = "probe-rs", version = "0.27.0" }
probe-rs-target = { path = "probe-rs-target", version = "0.27.0" }
probe-rs-mi = { path = "probe-rs-mi", version = "0.1.0" }

docsplay = "0.1.1"
thiserror = "2.0.11"
anyhow = "1.0.82"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.lints.clippy]
unnecessary_self_imports = "deny"
enum_glob_use = "deny"
macro_use_imports = "deny"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev.package.zip]
# Set the default for zip in development mode so the creation of the zip does not take forever
opt-level = 3
