[workspace.package]
version = "0.31.0"
edition = "2024"

documentation = "https://docs.rs/probe-rs/"
homepage = "https://github.com/probe-rs/probe-rs"
repository = "https://github.com/probe-rs/probe-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

# If this is increased, also update the minimum Rust version in .github/workflows/ci.yml
rust-version = "1.89"


[workspace]
resolver = "2"
members = [
    "probe-rs",
    "probe-rs-target",
    "smoke-tester",
    "smoke-tester-macros",
    "xtask",
    "target-gen",
    "probe-rs-tools",
    "probe-rs-mi",
    "probe-rs-debug",
]
exclude = ["probe-rs/tests/gpio-hal-blinky"]

[workspace.dependencies]
probe-rs = { path = "probe-rs", version = "0.31.0" }
probe-rs-target = { path = "probe-rs-target", version = "0.31.0" }
probe-rs-mi = { path = "probe-rs-mi", version = "0.1.0" }

docsplay = "0.1.1"
thiserror = "2.0.11"
anyhow = "1.0.82"
async-io = "2"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

[workspace.lints.clippy]
unnecessary_self_imports = "deny"
enum_glob_use = "deny"
macro_use_imports = "deny"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev]
# Keep stack trace data, but no other debug info by default.
# See https://kobzol.github.io/rust/rustc/2025/05/20/disable-debuginfo-to-improve-rust-compile-times.html
# If you have difficulty debugging probe-rs, remove this line temporarily.
debug = "line-tables-only"

[profile.release]
# For release builds the default is no debuginfo. Let's instead keep the
# line tables for better backtraces.
debug = "line-tables-only"

[profile.dev.package.zip]
# Set the default for zip in development mode so the creation of the zip does not take forever
opt-level = 3
