[package]
name = "cargo-flash"
version = "0.12.1"
authors = [
    "Noah Hüsser <yatekii@yatekii.ch>",
    "Dominik Boehi <dominik.boehi@gmail.com>",
]
edition = "2021"
description = "A utility to flash ARM cores with ELFs directly from within cargo."
documentation = "https://docs.rs/cargo-flash/"
homepage = "https://github.com/probe-rs/cargo-flash"
repository = "https://github.com/probe-rs/cargo-flash"
readme = "README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license = "MIT OR Apache-2.0"

[features]
default = []
ftdi = ["probe-rs/ftdi"]
sentry = ["probe-rs-cli-util/sentry"]

[dependencies]
env_logger = "0.9.0"
lazy_static = "1.4.0"
colored = "2.0.0"
probe-rs = { version = "0.12.0", git = "https://github.com/probe-rs/probe-rs" }
probe-rs-cli-util = { version = "0.12.0", git = "https://github.com/probe-rs/probe-rs", default-features = false, features = [
    "anyhow",
] }
git-version = "0.3.5"
anyhow = "1.0.57"
bytesize = "1.1.0"
thiserror = "1.0.31"
dunce = "1.0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"