[package]
name = "cargo-flash"
version = "0.13.0"
authors = [
    "Noah Hüsser <yatekii@yatekii.ch>",
    "Dominik Boehi <dominik.boehi@gmail.com>",
]
edition = "2021"
description = "A utility to flash ARM cores with ELFs directly from within cargo."
documentation = "https://docs.rs/cargo-flash/"
homepage = "https://github.com/probe-rs/cargo-flash"
repository = "https://github.com/probe-rs/cargo-flash"
readme = "README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license = "MIT OR Apache-2.0"

[features]
default = []
ftdi = ["probe-rs/ftdi"]
sentry = ["probe-rs-cli-util/sentry"]

[dependencies]
env_logger = "0.10"
lazy_static = "1"
colored = "2"
probe-rs = { version = "0.13", git = "https://github.com/probe-rs/probe-rs" }
probe-rs-cli-util = { version = "0.13", git = "https://github.com/probe-rs/probe-rs", default-features = false, features = [
    "anyhow",
] }
git-version = "0.3"
anyhow = "1"
bytesize = "1"
thiserror = "1"
dunce = "1"
clap = { version = "*", features = ["string"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[build-dependencies]
git-version = "0.3"
probe-rs-cli-util = { version = "0.13", git = "https://github.com/probe-rs/probe-rs", default-features = false, features = [
    "anyhow",
] }
