[package]
name = "cargo-flash"
version.workspace = true
authors = [
    "Noah Hüsser <yatekii@yatekii.ch>",
    "Dominik Boehi <dominik.boehi@gmail.com>",
]
edition.workspace = true
description = "A utility to flash ARM cores with ELFs directly from within cargo."
documentation = "https://docs.rs/cargo-flash/"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license = "MIT OR Apache-2.0"

[features]
default = []
ftdi = ["probe-rs/ftdi"]
sentry = ["probe-rs-cli-util/sentry"]

[dependencies]
env_logger = "0.10"
lazy_static = "1"
colored = "2"
probe-rs = { workspace = true }
probe-rs-cli-util = { workspace = true, default-features = false, features = [
    "anyhow",
] }
git-version = "0.3"
anyhow = "1"
bytesize = "1"
thiserror = "1"
dunce = "1"
clap = { version = "4.1.0", features = ["string"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[build-dependencies]
git-version = "0.3"
probe-rs-cli-util = { workspace = true, default-features = false, features = [
    "anyhow",
] }

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "## \\[Unreleased\\]"
replace = "## [Unreleased]\n\n## [{{version}}]\n\nReleased {{date}}"
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\[unreleased\\]: https://github.com/probe-rs/cargo-flash/compare/v([a-z0-9.-]+)\\.\\.\\.master"
replace = "[unreleased]: https://github.com/probe-rs/cargo-flash/compare/v{{version}}...master\n[v{{version}}]: https://github.com/probe-rs/cargo-flash/compare/v$1...v{{version}}"
