[package]
name = "probe-rs-cli"
version = "0.12.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>", "Dominik Boehi <dominik.boehi@gmail.ch>"]
edition = "2021"
description = "A cli for on chip debugging and flashing of ARM chips."
documentation = "https://docs.rs/probe-rs-cli/"
homepage = "https://github.com/probe-rs/probe-rs"
repository = "https://github.com/probe-rs/probe-rs"
readme = "../README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license = "MIT OR Apache-2.0"

[features]
ftdi = ["probe-rs/ftdi"]

[dependencies]
probe-rs = { path = "../probe-rs", version = "0.12.0" }
probe-rs-cli-util = { path = "../probe-rs-cli-util", version = "0.12.0" }
gdb-server = { path = "../gdb-server", version = "0.12.0" }

pretty_env_logger = "0.4.0"
log = "0.4.6"
scroll = "0.11.0"
rustyline = "9.0.0"
capstone = "0.11.0"
ron = "0.7.0"
ihex = "3.0.0"
colored = "2.0.0"
thiserror = "1.0"
anyhow = "1.0.34"
parse_int = "0.6.0"
num-traits = "0.2.14"
bitfield = "0.14.0"
jep106 = "0.2.6"
