[package]
name = "probe-rs-cli"
version.workspace = true
authors = [
    "Noah Hüsser <yatekii@yatekii.ch>",
    "Dominik Boehi <dominik.boehi@gmail.ch>",
]
edition.workspace = true
description = "A cli for on chip debugging and flashing of ARM chips."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license.workspace = true

[features]
ftdi = ["probe-rs/ftdi"]

[dependencies]
probe-rs = { workspace = true }
probe-rs-cli-util = { workspace = true }
gdb-server = { workspace = true }

pretty_env_logger = { workspace = true }
log = { workspace = true }
scroll = "0.11.0"
rustyline = "10.0.0"
capstone = "0.11.0"
ron = "0.8.0"
ihex = "3.0.0"
colored = "2.0.0"
thiserror = { workspace = true }
anyhow = { workspace = true }
parse_int = "0.6.0"
num-traits = "0.2.14"
bitfield = "0.14.0"
jep106 = "0.2.6"
itm = { version = "0.9.0-rc.1", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
chrono = "0.4.23"
serde = { version = "1.0.147", features = ["derive"] }
termtree = "0.4.0"
directories = "4"
sanitize-filename = "0.4"

[build-dependencies]
probe-rs-cli-util = { workspace = true }

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "## \\[Unreleased\\]"
replace = "## [Unreleased]\n\n## [{{version}}]\n\nReleased {{date}}"
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\[unreleased\\]: https://github.com/probe-rs/probe-rs/compare/v([a-z0-9.-]+)\\.\\.\\.master"
replace = "[unreleased]: https://github.com/probe-rs/probe-rs/compare/v{{version}}...master\n[v{{version}}]: https://github.com/probe-rs/probe-rs/compare/v$1...v{{version}}"
