[package]
name = "coresight"
version = "0.1.1"
authors = ["Noah Hüsser <yatekii@yatekii.ch>", "Dominik Boehi <dominik.boehi@gmail.ch>"]
edition = "2018"
description = "A collection of coresight tools to comminicate with ARM chips."
documentation = "https://docs.rs/coresight/"
homepage = "https://github.com/probe-rs/probe-rs"
repository = "https://github.com/probe-rs/probe-rs"
readme = "../README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
num-traits = "0.2.8"
enum-primitive-derive = "0.1.2"
bitfield = "0.13.2"
jep106 = "0.2.2"