[package]
name = "probe-rs-debug"
version = "0.1.0"
authors = ["Dominik Boehi <dominik.boehi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
gimli = "*"
object = "*"
arm-memory = { path = "../memory" }
debug-probe = { path = "../probe" }
stlink = { path = "../probe/stlink" }
daplink = { path = "../probe/daplink" }
coresight = { path = "../coresight" }