[package]
name = "gdb-server"
version = "0.12.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>", "Dominik Boehi <dominik.boehi@gmail.ch>"]
edition = "2021"
description = "A gdb stub implementation for on chip debugging and flashing of ARM chips."
documentation = "https://docs.rs/probe-rs-cli/"
homepage = "https://github.com/probe-rs/probe-rs"
repository = "https://github.com/probe-rs/probe-rs"
readme = "../README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license = "MIT OR Apache-2.0"

[lib]
name = "probe_rs_gdb_server"
path = "src/lib.rs"

[features]
ftdi = ["probe-rs/ftdi"]

[dependencies]
probe-rs = { path = "../probe-rs", version = "0.12.0" }
gdb-protocol = { version = "0.1.0" }
async-std = { version = "1.7.0" }
futures = "0.3.1"
log = "0.4.0"
memchr = "2.3.4"
hex = "0.4.2"
nom = "=7.1.1"
anyhow = "1.0.31"

[dev-dependencies]
insta = "1.10.0"
