[package]
name = "gdb-server"
version = "0.13.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>", "Dominik Boehi <dominik.boehi@gmail.ch>"]
edition = "2021"
description = "A gdb stub implementation for on chip debugging and flashing of ARM chips."
documentation = "https://docs.rs/probe-rs-cli/"
homepage = "https://github.com/probe-rs/probe-rs"
repository = "https://github.com/probe-rs/probe-rs"
readme = "../README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license = "MIT OR Apache-2.0"

[lib]
name = "probe_rs_gdb_server"
path = "src/lib.rs"

[features]
default = ["builtin-targets", "vendored-libusb"]

vendored-libusb = ["probe-rs/vendored-libusb"]
builtin-targets = ["probe-rs/builtin-targets"]
ftdi = ["probe-rs/ftdi"]
ftdi-vendored = ["probe-rs/ftdi-vendored"]

[dependencies]
probe-rs = { path = "../probe-rs", version = "0.13.0", default-features = false }
log = "0.4.0"
anyhow = "1.0.31"
itertools = "0.10.3"
gdbstub = "0.6.2"

[dev-dependencies]
insta = "1.10.0"
