[package]
name = "gdb-server"
version.workspace = true
authors = [
    "Noah Hüsser <yatekii@yatekii.ch>",
    "Dominik Boehi <dominik.boehi@gmail.ch>",
]
edition.workspace = true
description = "A gdb stub implementation for on chip debugging and flashing of ARM chips."
documentation = "https://docs.rs/probe-rs-cli/"
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license.workspace = true

[lib]
name = "probe_rs_gdb_server"
path = "src/lib.rs"

[features]
ftdi = ["probe-rs/ftdi"]

[dependencies]
probe-rs = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
itertools = "0.10.3"
gdbstub = "0.6.2"

[dev-dependencies]
insta = "1.10.0"
