[package]
name = "jep106"
version = "0.1.0"
authors = ["Noah Huesser <yatekii@yatekii.ch>"]
edition = "2018"
build = "build.rs"
description = "A pollable collection of all JEP106 manufacturer codes."
documentation = "https://docs.rs/jep106/"
homepage = "https://github.com/Yatekii/probe-rs"
repository = "https://github.com/Yatekii/probe-rs"
readme = "README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["jep106", "embedded"]
license = "MIT OR Apache-2.0"

[build-dependencies]
pdf-extract = "0.4.6"
regex = "1.1.6"