[package]
name = "ocd"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>", "Dominik Boehi <dominik.boehi@gmail.ch>"]
edition = "2018"
description = "A collection of on chip debugging tools to comminicate with ARM chips."
documentation = "https://docs.rs/ocd/"
homepage = "https://github.com/probe-rs/probe-rs"
repository = "https://github.com/probe-rs/probe-rs"
readme = "../README.md"
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4.6"
num = "0.2"
num-traits = "0.2.8"
enum-primitive-derive = "0.1.2"
jep106 = "0.2.2"
scroll = "0.9.2"
rusb = "0.5.1"
lazy_static = "1.2.0"
rental = "0.5.4"
hidapi = "0.5.2"
gimli = "*"
object = "*"
bitfield = "0.13.2"
bitflags = "*"
derivative = "*"
serde = "1.0.101"
serde_derive = "1.0.101"
ihex = "*"
capstone = "*"
goblin = "*"
crc = "*"
hexdump = "*"