[package]
authors = ["The Knurling Authors"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "panic-probe"
# dummy crate to guide people towards the new repo location of the panic-probe crate
publish = false
version = "0.1.0"

# need to keep the features to prevent Cargo errors at dependency-resolution time
[features]
# Print the panic message using `rtt-target`.
print-rtt = []
# Print the panic message using `defmt`.
print-defmt = ["defmt-error"]

defmt-error = [] # internal feature, do not use
