[package]
name = "probe-rs-cli-util"
version.workspace = true
authors = [
    "Noah Hüsser <yatekii@yatekii.ch>",
    "Dominik Boehi <dominik.boehi@gmail.com>",
]
edition.workspace = true
description = "Helper library for CLI applications based on probe-rs."
documentation = "https://docs.rs/probe-rs-cli-util/"
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
license.workspace = true

[features]
default = ["anyhow"]

[dependencies]
probe-rs = { workspace = true }

thiserror = "1.0"
anyhow = { version = "1.0", optional = true }
indicatif = "0.17.5"
env_logger = "0.10.0"
log = "0.4.18"
once_cell = "1.18.0"
colored = "2.0.0"
cargo_toml = "0.15.3"
serde = { version = "1", features = ["derive"] }
cargo_metadata = "0.15.4"
dunce = "1.0.4"
sentry = { version = "0.31.3", features = ["anyhow"], optional = true }
simplelog = "0.12.1"
terminal_size = "0.2.6"
clap = { version = "4.3", features = ["derive"] }
byte-unit = "4.0.19"
goblin = "0.6.1"
num-traits = "0.2.15"
defmt-decoder = { version = "0.3.7", features = ["unstable"] }
time = "0.3"
is-terminal = "0.4.7"
