[package]
name = "probe-rs-debug"
version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

description = "Debugging functionlity built on top of the probe-rs crate"

exclude = ["tests/debug-unwind-tests"]

[dependencies]
addr2line = "0.24.2"
bitfield = "0.19.0"
gimli = "0.31.1"
itertools = "0.14.0"
object = "0.36.7"
parse_int = "0.9.0"
probe-rs = { workspace = true }
probe-rs-target.workspace = true
serde = { version = "1.0.217", features = ["derive"] }
thiserror.workspace = true
tracing = "0.1.41"
typed-path = "0.11.0"

[lints]
workspace = true

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
pretty_assertions = "1.4.1"
probe-rs = { workspace = true, features = ["test"] }
termtree = "0.5.1"
test-case = "3.3.1"
