[package]
name = "probe-rs-linux"
version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
probe-rs.workspace = true

bitvec = "1"
docsplay.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gpiocdev = "0.8"

[lints]
workspace = true
