[package]
name = "probe-rs-linux"
version.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
probe-rs.workspace = true

bitfield = "0.19"
bitvec = "1"
docsplay.workspace = true
thiserror.workspace = true
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
gpiocdev = "0.8"
spidev = "0.7"

[lints]
workspace = true
