[package]
name = "probe-rs-linuxspidev"
version = "0.1.0"
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
probe-rs = { workspace = true }
probe-rs-target.workspace = true

thiserror.workspace = true
tracing = "0.1"
bitfield = "0.19.0"

[target.'cfg(target_os = "linux")'.dependencies]
spidev = "0.7"

[build-dependencies]
probe-rs = { workspace = true, features = ["test"] }
probe-rs-target = { workspace = true, features = ["bincode"] }

[lints]
workspace = true
