[package]
version = "0.1.0"
name = "probe-rs-mi"
edition = "2024"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

description = "The probe-rs machine interface for computers interfacing probe-rs"

[dependencies]
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
